<resources>
    <string name="app_name">Minesweeper</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_main">Minesweeper</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="img_desc"># Mines</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="exit">Exit</string>
    <string name="counter_zero" translatable="false">0</string>
    <string name="flag">Flag</string>
    <string name="restart">Restart</string>
    <string name="time">Time</string>
    <string name="the_end">Game finished!</string>
    <string name="you_won">You won!</string>
    <string name="confirm">Confirm</string>
    <string name="game">Game</string>
    <string name="difficulty">Difficulty</string>
    <string name="date">Date</string>
    <string name="difficulty_0">Easy</string>
    <string name="difficulty_1">Medium</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="restart_prompt_message">Do you really wish to restart the game?</string>
    <string name="restart_prompt_title">Restart</string>
    <string name="close">Close</string>
    <string name="again">Play again</string>
    <string name="game_finished">Game finished!</string>
    <string name="score_msg">Score: %d</string>
    <string name="score">Score</string>
    <string name="game_options_header">Game Options</string>
    <string name="language">Language</string>
    <string name="app_options_header">Application options</string>
    <string name="lang_english">English</string>
    <string name="lang_czech">Czech</string>
</resources>