<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/game_options_header">
        <ListPreference
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="lang"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="fulbo"
            app:entries="@array/font_entries"
            app:entryValues="@array/font_values"
            app:key="font"
            app:title="@string/font"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_options_header">

        <ListPreference
            app:defaultValue="easy"
            app:entries="@array/difficulty_entries"
            app:entryValues="@array/difficulty_values"
            app:key="diff"
            app:title="@string/difficulty"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>