<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:showDividers="middle"
    android:textAlignment="center">

    <TextView
        android:id="@+id/row_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/table_row_padding"
        android:text="@string/difficulty"
        android:textAlignment="center"
        android:textSize="@dimen/first_row_text_size" />

    <TextView
        android:id="@+id/row_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/table_row_padding"
        android:text="@string/time"
        android:textAlignment="center"
        android:textSize="@dimen/first_row_text_size" />

    <TextView
        android:id="@+id/row_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/table_row_padding"
        android:text="@string/score"
        android:textAlignment="center"
        android:textSize="@dimen/first_row_text_size" />

    <TextView
        android:id="@+id/row_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/table_row_padding"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="@dimen/first_row_text_size" />

</TableRow>